# EPM

./: CMakeLists.txt  Potential_transform.c  Potential_transform_1.0.c  Structure-Factor.c  cm_ld.sh  cm_lr.sh  cm_sd.sh  cm_sr.sh  test.c
Band/: CMakeLists.txt
Band/include/: epm.h
Band/src/: epm.c  epm_input.c
Control/: CMakeLists.txt  makefile
Control/include/: constants.h  error.h  logic.h  memory.h  openmp.h  timer.h  util.h  vectormap.h
Control/src/: error.c  memory.c  openmp.c  timer.c  util.c  vectormap.c
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Debug/Band/: Makefile  cmake_install.cmake
Debug/Control/: Makefile  cmake_install.cmake
Debug/EigenSolverLapack/: Makefile  cmake_install.cmake
Debug/Ham/: Makefile  cmake_install.cmake
Debug/Lattice/: Makefile  cmake_install.cmake
Debug/List/: Makefile  cmake_install.cmake
Debug/Main/: Makefile  cmake_install.cmake
Debug/Reader/: Makefile  cmake_install.cmake
EigenSolverLapack/: CMakeLists.txt  makefile
EigenSolverLapack/include/: eigenlapack.h
EigenSolverLapack/src/: lapack_eigen.c
Ham/: CMakeLists.txt
Ham/include/: ham.h
Ham/src/: ham_local.c  ham_spin.c  ham_tot.c
Lattice/: CMakeLists.txt
Lattice/include/: atom.h
Lattice/src/: Convert.c  Potential_transform.c  lattice_Gvec.c  lattice_input.c  lattice_neighbor.c
List/: CMakeLists.txt  makefile
List/include/: list.h
List/src/: list.c
Main/: CMakeLists.txt  makefile
Main/src/: main copy.c  main.c  main_copy.c
Reader/: CMakeLists.txt  makefile
Reader/include/: reader.h
Reader/src/: reader.c  reader_utils.c  test_reader.c
Release/: CMakeCache.txt  Makefile  cmake_install.cmake
Release/Control/: Makefile  cmake_install.cmake
Release/EigenSolverLapack/: Makefile  cmake_install.cmake
Release/Ham/: Makefile  cmake_install.cmake
Release/Lattice/: Makefile  cmake_install.cmake
Release/List/: Makefile  cmake_install.cmake
Release/Main/: Makefile  cmake_install.cmake
Release/Reader/: Makefile  cmake_install.cmake
cmake/Modules/: FindLAPACK.cmake
include/: atom.h
src/: lattice_input.c
